--- a/package.json
+++ b/package.json
@@ -9,10 +9,9 @@
   "scripts": {
     "test": "mocha"
   },
-  "dependencies": {
-    "chai": "^4.2.0"
-  },
+  "dependencies": {},
   "devDependencies": {
+    "chai": "^4.2.0",
     "mocha": "^7.0.0"
   },
   "author": "",
