--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "scripts": {
     "test": "mocha"
   },
-  "dependencies": {},
+  "dependencies": {
+    "chai-spies": "^1.0.0"
+  },
   "devDependencies": {
     "chai": "^4.2.0",
     "mocha": "^7.0.0"
