--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "test": "test"
   },
   "scripts": {
-    "test": "mocha"
+    "test": "mocha ./test/*.js -r esm"
   },
-  "dependencies": {},
+  "dependencies": {
+    "esm": "^3.2.25"
+  },
   "devDependencies": {
     "chai": "^4.2.0",
     "chai-spies": "^1.0.0",
