--- a/package.json
+++ b/package.json
@@ -9,12 +9,11 @@
   "scripts": {
     "test": "mocha ./test/*.js -r esm"
   },
-  "dependencies": {
-    "esm": "^3.2.25"
-  },
+  "dependencies": {},
   "devDependencies": {
     "chai": "^4.2.0",
     "chai-spies": "^1.0.0",
+    "esm": "^3.2.25",
     "mocha": "^7.0.0"
   },
   "author": "",
